--- a/Instructions.html
+++ b/Instructions.html
@@ -1,18 +1,42 @@
 <body>
     <div id="instruct_welcome" class="service">
-        Welcome to the testing program
+        Добро пожаловать в тест Time To Collision<br>
+        Сейчас вам будет предложена серия тренировочных заданий с описанием<br>
+        В самом тесте будут встречаться им подобные, но в случайном порядке<br>
+        <p style="color: grey; font-family: cursive;">
+            Нажмите пробел для продолжения
+        </p>
     </div>
 
     <div id="instruct_normal_waiting" class="service">
-        Description of normal test (with 50% occlusion)
+        Перед вами - первый тип задач<br>
+        Зеленый шарик будет двигаться по траектории к черной точке на конце, и в какой-то
+        момент скроется из виду, но продолжит движение<br>
+        Ваша задача - остановить его нажатием пробела тогда, когда, по-вашему, он достигнет конца пути
+        (но не дальше)<br>
+        <p style="color: grey; font-family: cursive;">
+            Нажмите пробел для запуска анимации
+        </p>
     </div>
 
     <div id="instruct_normal_running" class="service">
-        Description of a test without occlusion
+        Сейчас шарик едет к черной точке на конце линии, и на подходе к ней скроется из виду
+        <p style="color: grey; font-family: cursive;">
+            Нажмите пробел, когда он будет на точке цели
+        </p>
     </div>
 
     <div id="instruct_normal_inspect" class="service">
-        Description of a test with backwards movement
+        В тренировочных попытках положение шарика после остановки показывается, в самом тесте - не будет
+        <p style="color: grey; font-family: cursive;">
+            Нажмите пробел для продолжения
+        </p>
+    </div>
+
+    <div id="instruct_normal_repeat" class="service">
+        <p style="color: grey; font-family: cursive;">
+            Повторите тест несколько раз
+        </p>
     </div>
 
     <div id="instruct_starting" class="service">
