--- a/Viewer.html
+++ b/Viewer.html
@@ -113,7 +113,7 @@
     import {TrainLoader} from "./DataLoader.js";
     window.onload = async function() {
         let tl = new TrainLoader();
-        await tl._runNormal(1)
+        await tl.runAll()
     }
 </script>
 </body>
