--- a/Viewer.html
+++ b/Viewer.html
@@ -24,7 +24,6 @@
             transition: all 0.3s ease;
         }
 
-        /* Hidden state (can be toggled dynamically) */
         .instructions-box.hidden {
             height: 0;
             width: 0;
@@ -35,11 +34,12 @@
 
         .svg-container {
             width: 100%;
-            height: calc(100vh - 120px); /* adjusted to account for top + info box */
+            height: calc(100vh - 120px);
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #f9f9f9;
+            position: relative; /* Needed for overlay positioning */
         }
 
         svg {
@@ -88,15 +88,33 @@
             display: none;
         }
 
+        /* TODO written by chatgpt, inspect */
+        .svg-banner {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            font-size: 22px;
+            font-weight: bold;
+            color: #333;
+            z-index: 10;
+        }
+
+        .svg-banner.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
 
-<div id="instructionsBox" class="instructions-box">
-    <strong>Instructions:</strong>
-    Use this visualization to explore different ball trajectories.
-    The animation cycles through predefined paths in libraries H1 and H2.
-</div>
+<div id="instructionsBox" class="instructions-box hidden"><!-- This won't be visible --></div>
 
 <div class="svg-container">
     <svg viewBox="0 0 700 400" preserveAspectRatio="xMidYMid meet">
@@ -105,6 +123,10 @@
         <g id="svg_ball_top"></g>
         <g id="svg_traj"></g>
     </svg>
+
+    <div id="svg_banner" class="svg-banner hidden">
+        Нажмите "пробел" для продолжения
+    </div>
 </div>
 
 <iframe src="./Instructions.html" id="instructionTexts" height="0" width="0"></iframe>
@@ -113,7 +135,7 @@
     import {TrainLoader} from "./DataLoader.js";
     window.onload = async function() {
         let tl = new TrainLoader();
-        await tl.runAll()
+        await tl.runAll();
     }
 </script>
 </body>
