fixed total path miscalc

--- a/Viewer.html
+++ b/Viewer.html
@@ -144,8 +144,8 @@
 
     window.onload = async function() {
         //let tl = new TrainLauncher();
-        //await tl.runAll()
-
+        //await tl._runBackward()
+        // TODO add space presses to log
         let rr = new RandomRunner();
         await rr.Run()
     }
