--- a/Viewer.html
+++ b/Viewer.html
@@ -38,7 +38,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f9f9f9;
+            background-color: #ffffff;
             position: relative; /* Needed for overlay positioning */
         }
 
@@ -46,7 +46,7 @@
             max-width: 100%;
             max-height: 100%;
             border: 1px solid #ccc;
-            background-color: #f9f9f9;
+            background-color: #ffffff;
         }
 
         .svg_traj {
@@ -68,11 +68,11 @@
         }
 
         .svg_mask_traj {
-            stroke: #ffff00;
+            stroke: #ffffff;
             stroke-width: 25;
             stroke-dasharray: 5,5;
             fill: none;
-            opacity: 0.7;
+            opacity: 1.0;
             stroke-linecap: round;
         }
 
@@ -161,11 +161,9 @@
 
 <script type="module">
     import {RandomRunner} from "./RandomRunner.js";
-    import {TrainLauncher} from "./TrainLaunchers.js";
+    import {TrainLauncher} from "./_TrainLaunchers.js";
 
     window.onload = async function() {
-        //let tl = new TrainLauncher();
-        //await tl._runBackward()
         // TODO add space presses to log
         let rr = new RandomRunner();
         await rr.Run()
